platform/networking/traefik/gateway-public-tunnel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-tunnel
  namespace: networking
spec:
  gatewayClassName: traefik
  listeners:
    - name: webtunnel
      port: 8081
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.excloo.dev/public-access: "true"
